--- a/wp-content/themes/pub/wporg-learn-2020/css/components/_sidebar-filters.scss
+++ b/wp-content/themes/pub/wporg-learn-2020/css/components/_sidebar-filters.scss
@@ -27,6 +27,7 @@
 	@media only screen and (min-width: $breakpoint-tablet) {
 		&.gap-64 {
 			margin-top: 4rem;
+			margin-bottom: 0.25rem;
 		}
 	}
 }
